@@ -39,7 +39,6 @@ import com.apple.foundationdb.record.query.plan.cascades.values.Value;
 import com.apple.foundationdb.record.query.plan.cascades.values.translation.PullUp;
 import com.apple.foundationdb.record.query.plan.cascades.values.translation.TranslationMap;
 import com.google.common.base.Verify;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 
 import javax.annotation.Nonnull;
@@ -48,26 +47,73 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 
 /**
- * A table function expression that "explodes" a repeated field into a stream of its values.
+ * A table function expression that “explodes” a repeated field into a stream of its values.
+ *
+ * <p>In the {@code WITH ORDINALITY} variant, it also generates 1-based ordinals of the field values. In this case it
+ * produces a struct with fields {@code {_element, _ordinal}} instead of the bare element.
  */
 @API(API.Status.EXPERIMENTAL)
 public class ExplodeExpression extends AbstractRelationalExpressionWithoutChildren implements InternalPlannerGraphRewritable {
+    public static final String ELEMENT_FIELD_NAME = "_element";
+    public static final String ORDINAL_FIELD_NAME = "_ordinal";
+
     @Nonnull
     private final Value collectionValue;
 
-    public ExplodeExpression(@Nonnull final Value collectionValue) {
+    /**
+     * Whether ordinals should be produced alongside the array elements.
+     */
+    private final boolean withOrdinality;
+
+    public ExplodeExpression(@Nonnull final Value collectionValue, final boolean withOrdinality) {
         this.collectionValue = collectionValue;
+        this.withOrdinality = withOrdinality;
+    }
+
+    public ExplodeExpression(@Nonnull final Value collectionValue) {
+        this(collectionValue, false);
+    }
+
+    /**
+     * Returns the element type of the collection value.
+     */
+    @Nonnull
+    public Type getElementType() {
+        Verify.verify(collectionValue.getResultType().isArray());
+        return Objects.requireNonNull(((Type.Array)collectionValue.getResultType()).getElementType());
+    }
+
+    /**
+     * Returns the type of the explode result. For the {@code WITH ORDINALITY} variant, builds the
+     * struct result type {@code {_element: elementType, _ordinal: INT}}.
+     */
+    @Nonnull
+    public static Type explodeResultType(@Nonnull final Type elementType, boolean withOrdinality) {
+        if (withOrdinality) {
+            return Type.Record.fromFields(List.of(
+                    Type.Record.Field.of(elementType, Optional.of(ELEMENT_FIELD_NAME)),
+                    Type.Record.Field.of(Type.primitiveType(Type.TypeCode.INT, false), Optional.of(ORDINAL_FIELD_NAME))));
+        } else {
+            return elementType;
+        }
+    }
+
+    /**
+     * Returns the type of the explode result.
+     */
+    @Nonnull
+    public Type getExplodeResultType() {
+        return explodeResultType(getElementType(), withOrdinality);
     }
 
     @Nonnull
     @Override
     public Value getResultValue() {
-        Verify.verify(collectionValue.getResultType().isArray());
-
-        return new QueriedValue(Objects.requireNonNull(((Type.Array)collectionValue.getResultType()).getElementType()));
+        return new QueriedValue(getExplodeResultType());
     }
 
     @Nonnull
@@ -79,6 +125,10 @@ public class ExplodeExpression extends AbstractRelationalExpressionWithoutChildr
     @Nonnull
     public Value getCollectionValue() {
         return collectionValue;
+    }
+
+    public boolean isWithOrdinality() {
+        return withOrdinality;
     }
 
     @Nonnull
@@ -100,19 +150,19 @@ public class ExplodeExpression extends AbstractRelationalExpressionWithoutChildr
         if (this == otherExpression) {
             return true;
         }
-        if (!(otherExpression instanceof ExplodeExpression)) {
+        if (!(otherExpression instanceof final ExplodeExpression otherExplodeExpression)) {
             return false;
         }
-
-        final var otherExplodeExpression = (ExplodeExpression)otherExpression;
-
         return collectionValue.semanticEquals(otherExplodeExpression.getCollectionValue(), equivalencesMap) &&
-               semanticEqualsForResults(otherExpression, equivalencesMap);
+                withOrdinality == otherExplodeExpression.withOrdinality &&
+                semanticEqualsForResults(otherExpression, equivalencesMap);
     }
 
     @Override
     public int computeHashCodeWithoutChildren() {
-        return Objects.hash(collectionValue);
+        return withOrdinality
+               ? Objects.hash(collectionValue, true)
+               : Objects.hash(collectionValue);
     }
 
     @Nonnull
@@ -126,7 +176,7 @@ public class ExplodeExpression extends AbstractRelationalExpressionWithoutChildr
                 collectionValue.translateCorrelations(translationMap, shouldSimplifyValues);
         // this is ok since there are no new quantifiers
         if (translatedCollectionValue != collectionValue) {
-            return new ExplodeExpression(translatedCollectionValue);
+            return new ExplodeExpression(translatedCollectionValue, withOrdinality);
         }
         return this;
     }
@@ -138,7 +188,7 @@ public class ExplodeExpression extends AbstractRelationalExpressionWithoutChildr
                                           @Nonnull final IdentityBiMap<Quantifier, PartialMatch> partialMatchMap,
                                           @Nonnull final EvaluationContext evaluationContext) {
         if (!isCompatiblyAndCompletelyBound(bindingAliasMap, candidateExpression.getQuantifiers())) {
-            return ImmutableList.of();
+            return List.of();
         }
 
         return exactlySubsumedBy(candidateExpression, bindingAliasMap, partialMatchMap, TranslationMap.empty());
@@ -161,14 +211,16 @@ public class ExplodeExpression extends AbstractRelationalExpressionWithoutChildr
         return PlannerGraph.fromNodeAndChildGraphs(
                 new PlannerGraph.LogicalOperatorNode(this,
                         "Explode",
-                        ImmutableList.of(toString()),
+                        List.of(toString()),
                         ImmutableMap.of()),
                 childGraphs);
     }
 
     @Override
     public String toString() {
-        return collectionValue.toString();
+        return withOrdinality
+                ? collectionValue + " WITH ORDINALITY"
+                : collectionValue.toString();
     }
 
     public static ExplodeExpression explodeField(@Nonnull final Quantifier.ForEach baseQuantifier,
